fixes modal visibility when closed

--- a/web/src/components/Modal/modal.module.css
+++ b/web/src/components/Modal/modal.module.css
@@ -32,6 +32,7 @@
   height: 94vh;
   width:90vw;
   left:5vw;
+  opacity: 0;
   top:3vh;
   overflow: scroll;
   position:fixed;
